# stoic-cli

./: Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
data/de/: discourses.json  meditations.json  moral_letters.json
data/el/: discourses.json  meditations.json
data/en/: discourses.json  meditations.json  moral_letters.json
data/fr/: discourses.json  meditations.json  moral_letters.json
data/la/: moral_letters.json
data/ru/: discourses.json  meditations.json  moral_letters.json
npm/: install.js  package.json
src/: app.rs  cli.rs  main.rs  update.rs
src/api/: bolls.rs  mod.rs  types.rs
src/data/: books.rs  mod.rs  reference.rs  stoics.rs
src/store/: cache.rs  state.rs
src/ui/: banner.rs  browser.rs  theme.rs  verse_card.rs
