[package]
name = "stoic-cli"
version = "0.1.0"
edition = "2021"
description = "A beautiful Stoic philosophy TUI — read Marcus Aurelius, Seneca, and Epictetus in your terminal"
license = "MIT"
repository = "https://github.com/Dizro/stoic-cli"
homepage = "https://github.com/Dizro/stoic-cli"
readme = "README.md"

[[bin]]
name = "stoic"
path = "src/main.rs"

[dependencies]
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = "0.28"
tachyonfx = "0.9"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "6"
confy = "0.6"
unicode-width = "0.2"
once_cell = "1"

[profile.release]
opt-level = "z"
lto = true
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'dist'
[workspace.metadata.dist]
cargo-dist-version = "0.31.0"
ci = "github"
installers = ["shell", "npm"]
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]
install-path = "CARGO_HOME"
